# NoCrate

./: .editorconfig  .gitignore  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: PLAN.md  RESEARCH.md
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  nocrate.exe.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_asio.rs
src-tauri/resources/: README.md
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/aura/: controller.rs  protocol.rs
src-tauri/src/commands/: aura.rs  config.rs  fan.rs  mod.rs  sensor.rs  system.rs
src-tauri/src/sio/: chips.rs  detect.rs  driver.rs  ite.rs  mod.rs  nuvoton.rs
src-tauri/src/wmi/: asus_mgmt.rs  connection.rs  lhm.rs  mod.rs
src/components/: aura-effect-selector.tsx  color-picker.tsx  desktop-fan-policy-card.tsx  elevation-dialog.tsx  fan-curve-editor.tsx  fan-gauge.tsx  sidebar.tsx  thermal-profile-selector.tsx  titlebar.tsx
src/components/layout/: AppLayout.tsx  PageTransition.tsx  (+2 more)
src/hooks/: use-admin-status.tsx  use-asushw-data.tsx  use-config.tsx  use-desktop-fan-data.tsx  use-fan-data.tsx  use-lhm-data.tsx  use-temp-alerts.tsx  use-theme.tsx  use-toast.tsx  useTheme.tsx
src/layouts/: app-layout.tsx
src/lib/: aura-commands.ts  config-commands.ts  motion.ts  system-commands.ts  tauri-commands.ts  types.ts  utils.ts
src/pages/: Dashboard.tsx  FanControl.tsx  Settings.tsx  aura-page.tsx  fan-page.tsx  sensor-page.tsx  settings-page.tsx
src/styles/: globals.css
(+4 files in other folders)
