[package]
name = "nocrate"
version = "0.1.0"
description = "Lightweight ASUS motherboard hardware control tool"
authors = ["xiaoxiao-cvs"]
edition = "2021"

[lib]
name = "nocrate_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
hidapi = { version = "2", features = ["windows-native"] }

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Wmi",
    "Win32_System_Variant",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[features]
default = []
sio = []

[lints.rust]
unsafe_code = "warn"
unused_results = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
